<resources>
    <string name="app_name" translatable="false">SmartTask</string>

    <!--- MainScreen Task List and Calendar -->
    <string name="main_screen_tasks">Tasks</string>
    <string name="main_screen_calendar">Calendar</string>
    <string name="main_double_tap">Double-tap to exit</string>

    <!--- LogInActivity -->
    <string name="main_sign_up">Sign up</string>
    <string name="main_log_in">Log in</string>
    <string name="main_log_in_email">Email</string>
    <string name="main_log_in_pw">Password</string>


    <!-- SignUpActivity -->
    <string name="signup_sign_up">Sign up</string>
    <string name="signup_first_name">First name</string>
    <string name="signup_last_name">Last name</string>
    <string name="signup_birthday">Birthday</string>
    <string name="signup_email">Email</string>
    <string name="signup_user_name">User name</string>
    <string name="signup_password">Password. Minimum 6 characters</string>
    <string name="signup_sign_me_up">Sign me UP!!!*</string>
    <string name="signup_read_terms">*I read, understood and accept the terms of usage.</string>

    <!-- IntroActivity -->
    <string name="intro_next">Next</string>
    <string name="intro_skip">Skip</string>
    <string name="intro_got_it">Got It!</string>
    <string name="intro_dont_show_again">Don\'t show tutorial on next start?</string>
    <string name="intro_waiting_connection"> Waiting for a connection!</string>

    <!-- SmartTask SubMenuActivity Rework -->
    <string name="smarttask_activity_tasks">Tasks</string>
    <string name="smarttask_activity_calendar">Calendar</string>
    <string name="smarttask_activity_messages">Messages</string>

    <!-- SmartTask ListOfTasks Tasks -->
    <string name="smarttask_list_title_label">Title</string>
    <string name="smarttask_list_task_name">Name of your task</string>
    <string name="smarttask_list_solved">Solved?</string>

    <!-- SmartTask Create  Profile-->
    <string name="smarttask_create_profile_Headline">Profile</string>
    <string name="smarttask_create_profile_name">Enter your profile name</string>
    <string name="smarttask_create_profile_pincode">Enter Pin-code (4-digit)(Optional)</string>
    <string name="smarttask_create_profile_privilgies">Define access level</string>
    <string name="smarttask_create_profile_picture">Click to add picture</string>
    <string name="smarttask_create_profile_done">Done</string>
    <string name="smarttask_create_profile_Add">Add Profile</string>
    <string name="smarttask_create_profile_name_toast">Please enter your profile name</string>
    <string name="smarttask_create_profile_pincode_toast">Please enter Pin-code (4-digit)</string>
    <string name="smarttask_create_profile_spinner_admin">Admin</string>
    <string name="smarttask_create_profile_spinner_user">User</string>
    <string name="smarttask_create_profile_spinner_kid">Kid</string>

    <!-- SmartTask Create Tasks -->
    <string name="NewTask_Headline">Define the task</string>
    <string name="NewTaskLocation">Room/Area?</string>
    <string name="smarttask_create_task_colour">Choose colour for task</string>
    <string name="NewTaskPoints">Define Points</string>
    <string name="NewTaskTime">Enter Due Time</string>
    <string name="NewTaskDate">Enter Due Date</string>
    <string name="NewTaskDescription">Write a description for the task</string>
    <string name="NewTaskFrequency">Choose frequency</string>
    <string name="NewTaskName">Name of the Task</string>
    <string name="NewTaskPriority">Set priority</string>
    <string name="NewTaskResponsible">Assign task to</string>
    <string name="NewTaskCreateTaskButton">Add</string>
    <!-- Toasts -->
    <string name="newtask_categories">Please specify a place.</string>
    <string name="newtask_colorcode">Please specify a color code.</string>
    <string name="newtask_datetime">Please specify an end date.</string>
    <string name="newtask_description">Please specify a description.</string>
    <string name="newtask_frequency">Please specify a frequency.</string>
    <string name="newtask_name">Please specify a name.</string>
    <string name="newtask_points">Please specify how many points this task is worth.</string>
    <string name="newtask_priority">Please specify a priority.</string>
    <string name="newtask_responsible">Please specify the responsible persons.</string>
    <!--Spinner Frequeuncy-->
    <string name="newtask_spinner_frequency_prompt">Set the frequency</string>
    <string name="newtask_spinner_once">Once</string>
    <string name="newtask_spinner_daily">Daily</string>
    <string name="newtask_spinner_weekly">Weekly</string>
    <string name="newtask_spinner_monthly">Monthly</string>
    <string name="newtask_spinner_yearly">Yearly</string>
    <!--Spinner Priority-->
    <string name="newtask_spinner_priority_prompt">Set the priority</string>
    <string name="newtask_spinner_high">High</string>
    <string name="newtask_spinner_middle">Middle</string>
    <string name="newtask_spinner_low">Low</string>
    <string name="newtask_spinner_responsible_prompt">Set the priority</string>

    <!-- SmartTask View Task -->
    <string name="ViewTaskHeadline">Task Viewer</string>
    <string name="ViewTaskEditButton">Edit</string>
    <string name="ViewTask_delete_btn">Delete</string>
    <string name="ViewTaskDoneButton">Task Complete</string>
    <string name="ViewTaskSaveButton">Save</string>
    <string name="ViewTaskAddPictureButton">Upload Picture</string>
    <string name="ViewTaskConfirmButton">Task Confirmed</string>
    <string name="ViewTaskUnConfirmButton">Restore Task</string>
    <string name="ViewTaskConfirmMoveOneYear">Task Completed and move to next year</string>
    <string name="ViewTaskConfirmMoveOneMonth">Task Completed and move to next Month</string>
    <string name="ViewTaskConfirmMoveOneWeek">Task Completed and move to next Week</string>
    <string name="ViewTaskConfirmMoveOneDay">Task Completed and move to tomorrow</string>





    <string name="open">open</string>
    <string name="close">close</string>


    <!-- DatePicker and TimePicker -->
    <string name="date_picker_title">Date of task</string>
    <string name="time_picker_title">Time of task</string>


    <!-- Menu fragment -->
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_profile"> Switch profile</string>
    <string name="menu_logout">Logout</string>

    <!-- List fragment -->
    <string name="list_high_p">H</string>
    <string name="list_middle_p">M</string>
    <string name="list_low_p">L</string>

    <!-- Settings fragment -->
    <string name="settings_toolbar">Settings</string>
    <string name="settings_list_title">List</string>
    <string name="settings_list_sort_date">Sort by date</string>
    <string name="settings_list_sort_priority">Sort by priority</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_all">All notifications</string>
    <string name="settings_notifications_email">Email notifications</string>
    <string name="settings_notifications_push">Push notifications</string>
    <string name="settings_notifications_none">No notifications</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_reward_title">Reward System</string>
    <string name="settings_reward_enabled">Enabled</string>
    <string name="settings_reward_disabled">Disabled</string>

    <string name="settings_prouser_title">Pro User</string>
    <string name="settings_prouser_on">You are a Pro User!</string>
    <string name="settings_prouser_off">No Pro :(</string>

    <string name="settings_feedback_title">Feedback</string>
    <string name="settings_feedback_on">Thanks for helping us!</string>
    <string name="settings_feedback_off">Feedback off</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_version" translatable="false">Version 01010011 01101101 01100001 01110010 01110100 01010100 01100001 01110011 01101011  </string>

    <!-- SubSettings List fragment -->
    <string name="subsettings_list_title_date">Sort by date</string>
    <string name="subsettings_list_description_date">Sort by date</string>
    <string name="subsettings_list_title_priority">Sort by priority</string>
    <string name="subsettings_list_description_priority">Your list will show your tasks in order of their priority</string>
    <string name="subsettings_list_title_pastitems">Show completed tasks</string>
    <string name="subsettings_list_description_pastitems">Your list will only show open tasks if set to false</string>

    <!-- SubSettings Pro fragment -->
    <string name="subsettings_prouser_title">Pro User</string>
    <string name="subsettings_prouser_description">As pro user you don\'t see adds!</string>
    <string name="add_profile">Add profile</string>

    <!-- View Profile -->
    <string name="view_profile_addtext_points">" points"</string>
    <string name="view_profile_addtext_levek">" level"</string>
    <string name="view_profile_addtext_completed_task">" completed tasks"</string>

    <!-- Choose Profile -->
    <string name="wrong_password">"Wrong password!"</string>
    <string name="choose_profile_password">"Password"</string>
    <string name="welcome_text" translatable="false">Welcome</string>
    <string name="welcome_description" translatable="false">Smarttask is an app for managing your tasks in your household, this guide will introduce you to the most important features with ease, and you should really follow it and not skip it</string>
    <string name="welcome_swipe" translatable="false">Swipe right to continue</string>
    <string name="welcome2_titel" translatable="false">This is the create profile view</string>
    <string name="welcome2_description" translatable="false">Your first profile should be of the type admin and with a pincode</string>
    <string name="welcome3_titel" translatable="false">Managing task</string>
    <string name="welcome3_description" translatable="false">Here you can see all tasks, add new task, and more</string>
    <string name="description_title">Description</string>
    <string name="welcome_done" translatable="false">Thats it!</string>
    <string name="welcome_done2" translatable="false">You are now all set to use smarttask, you can disable this intro, and always reenable it in the settings.</string>


</resources>
