<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joe.smarttask.MainActivity">

    <TextView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1565C0"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/signup_sign_up"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="25"
        android:hint="@string/signup_first_name"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="25"
        android:hint="@string/signup_last_name"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="25"
        android:hint="@string/signup_birthday"
        android:inputType="date"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="25"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="25"
        android:hint="@string/signup_user_name"
        android:inputType="textPersonName"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="25"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#1565C0"
        android:text="@string/signup_sign_me_up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/signupButton"
        android:layout_marginStart="20dp"
        android:text="@string/signup_read_terms"
        android:textSize="10sp" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
