<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/black"
    tools:context="com.smarttask17.joe.smarttask.LogInActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:hint="@string/main_log_in_email">


        <EditText
            android:id="@+id/enter_email"
            style="EditTextCustomHolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/enter_password"
            android:layout_below="@+id/imageView4"

            android:layout_marginTop="22dp"
            android:backgroundTint="#FFFFFF"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/main_log_in_email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <!--android:background="#282828"
    android:backgroundTint="#282828"
    -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email"
        android:layout_alignStart="@+id/input_layout_email"
        android:id="@+id/input_layout_password">

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_email"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/main_log_in_pw"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="332dp"
        android:layout_below="@+id/signUp"
        android:layout_centerHorizontal="true">

    </com.google.android.gms.common.SignInButton>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="235dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_logo" />

    <Button
        android:id="@+id/signUp"
        android:background="@drawable/button_layout_login_and_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_weight="1"
        android:text="@string/main_sign_up"
        android:textColor="#FFFFFF"

        android:textSize="15sp"
        android:layout_below="@+id/logIn"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/logIn"
        android:background="@drawable/button_layout_login_and_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:text="@string/main_log_in"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/input_layout_password"
        android:layout_alignStart="@+id/signUp" />


</RelativeLayout>
